--- a/style.css
+++ b/style.css
@@ -28,10 +28,19 @@
   border: none;
   border-radius: 8px;
 }
+.section-title{
+  font-size: 2.8rem;
+}
 
+/* main style */
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+main > section{
+  margin-top: 100px;
+}
 /* header styles  */
-
-
 
 /* navbar related styles  */
 .navbar{
@@ -41,9 +50,6 @@
 .brand{
   font-weight: bold;
   font-size: 2.8rem;
-}
-.nav-links{
-   margin-right: ;
 }
 .nav-item{
   list-style: none;
@@ -77,17 +83,110 @@
 .bannar-img{
   width: 100%;
 }
-img{
+.bannar img{
   margin-bottom: 50px;
 }
 
-/* responsive media query */
+/* team style  */
+.teams{
+  align-items: center;
+  
+}
+.team-img-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 24px;
+}
+.our-feature{
+  margin-left: 130px;
+  max-width: 530px;
+}
+
+#quik-list{
+  font-weight: 500;
+}
+.feature-title-1{
+  font-size: 45px;
+  font-weight: 600;
+  color: #727272;
+}
+
+.feature-title-2{
+  font-size: 45px;
+  font-weight: 700;
+  color: #131313;
+}
+
+.feature-title-3{
+  font-size: 45px;
+  font-weight: 600;
+  color: #FF900E;
+}
+/* some fact style  */
+.fact-title{
+  margin-top: 130px;
+}
+.fact-description{
+  width:540px;
+  margin-top: 25px;
+  margin-bottom: 100px;
+}
+.fact-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 24px;
+}
+.fact-card{
+  border:1px solid #FF900E;
+  width: 240px;
+  height: 240px;
+  border-radius: 8px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.fact-numer{
+  font-weight: 600;
+  font-size: 2.8rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.factmane{
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: #727272;
+  margin-top: 5px;
+}
+                                       /* responsive media query */
+
+        /* small device  */
 @media screen and (max-width: 576px){
-.navbar, .nav-links{
-  flex-direction: column;
+  .navbar, 
+  .nav-links, 
+  .teams{
+    flex-direction: column;
+  }
+  .team-img-container, 
+  .fact-container{
+    grid-template-columns: 1fr;
+  }
+  .our-feature{
+    margin-left: 20px;
+  }
+  .fact-container{
+   justify-items: center; 
+   gap:24px;
+  }
+
+}
+          /* medium size device */
+@media screen and (min-width:576px) and (max-width:992px){
+  .teams{
+    flex-direction: column;
+  }
+.our-feature{
+  margin-left: 50px auto;
+}
 }
 
-
-
-}
 
