--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ main > section{
   font-weight: 400;
   font-size: 18px;
 }
-.navbar , .bannar{
+.navbar , 
+.bannar,
+footer{
  max-width: 1440px;
   margin: 0 auto;
 }
@@ -157,17 +159,79 @@ main > section{
   color: #727272;
   margin-top: 5px;
 }
+/* feature style  */
+.features{
+  gap: 100px;
+}
+#feature-title-left{
+  border-left: 5px solid #FF900E;
+  padding-left: 20px;
+}
+.feature-card {
+  padding: 30px;
+  box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+.feature-card .feature-title{
+  font-size:  1.25rem;
+  font-weight: 600;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+#experience-badge{
+  padding: 45px 42px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-top: -100px;
+  margin-left: -100px;
+}
+#experience-year{
+  font-size: 4rem;
+  font-weight: 700;
+}
+/* our sponspors style  */
+.sponspors-info{
+  max-width: 540px;
+  text-align: center;
+  margin: 50px auto;
+}
+.sponsport-companies{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  color: grayscale;
+}
+.sponsport-companies img{
+  filter: grayscale(100%);
+}
+footer{
+  background-color:#FFF4E7 ;
+  height: 100px;
+  align-items: center;
+  margin-top: 130px;
+  margin-bottom: 200px;
+  border-radius: 8px;
+}
+.footer-p{
+  text-align:center ;
+  padding: 40px 0;
+}
+
+
+
                                        /* responsive media query */
 
         /* small device  */
 @media screen and (max-width: 576px){
   .navbar, 
   .nav-links, 
-  .teams{
+  .teams,
+  .features{
     flex-direction: column;
   }
   .team-img-container, 
-  .fact-container{
+  .fact-container,
+  .sponsport-companies{
     grid-template-columns: 1fr;
   }
   .our-feature{
@@ -177,16 +241,40 @@ main > section{
    justify-items: center; 
    gap:24px;
   }
+.sponsport-companies{
+  justify-items: center;
+  gap: 50px;
+}
+#feature-architect{
+  width: 100%;
+}
+#experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+}
+  
 
 }
           /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px){
-  .teams{
+  .teams,
+  .features{
     flex-direction: column;
   }
 .our-feature{
   margin-left: 50px auto;
 }
+.sponsport-companies,
+.fact-container{
+  grid-template-columns: repeat(2,1fr);
+  gap: 50px;
+  justify-items: center;
+}
+#experience-badge{
+  margin-top: 20px;
+  margin-left: 20px;
+}
+
 }
 
 
